--- a/MyFirstBlazorSolution/MyFirstBlazorApp/MyFirstBlazorApp.csproj
+++ b/MyFirstBlazorSolution/MyFirstBlazorApp/MyFirstBlazorApp.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\MyWebClassLibrary\MyWebClassLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
